# jrsync

./: .gitignore  README.md  pyproject.toml
jrsync/conf/: __init__.py  global_settings.py
jrsync/core/: __init__.py  main.py  pyrsync.py
jrsync/management/: cli.py
jrsync/model/: sync.py
jrsync/utils/: log.py  str_parser.py
tests/: test_str_parser.py
