[tool.poetry]
name = "jrsync"
version = "0.1.0"
description = "JSON Configurable wrapper on unix rsync "
authors = ["Antonio Mariani <antonio.mariani@cmcc.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
